[gd_scene load_steps=2 format=3 uid="uid://dmqja3321gwlp"]

[ext_resource type="Script" path="res://scripts/fish.gd" id="1_7e3ry"]

[node name="Fish" type="Area2D"]
script = ExtResource("1_7e3ry")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(57, 0, 0, -20, -7, 0, 0, 20)

[node name="CollisionBody" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(57, 0, 0, -20, -7, 0, 0, 20)

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionVision" type="CollisionPolygon2D" parent="Vision"]
polygon = PackedVector2Array(-50, 0, 20, -80, 180, 0, 20, 80)

[node name="FolderRays" type="Node2D" parent="."]

[node name="RayCast2D_F1" type="RayCast2D" parent="FolderRays"]
target_position = Vector2(162, -9)

[node name="RayCast2D2_F2" type="RayCast2D" parent="FolderRays"]
target_position = Vector2(156, 12)

[node name="RayCast2D3_L1" type="RayCast2D" parent="FolderRays"]
target_position = Vector2(70, -55)

[node name="RayCast2D4_R1" type="RayCast2D" parent="FolderRays"]
target_position = Vector2(70, 55)

[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
